--- a/styles/style.css
+++ b/styles/style.css
@@ -4,3 +4,15 @@
 .outfit-font {
     font-family: "Outfit", serif;
 }
+
+/* Chrome, Safari, Edge, Opera */
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+    -moz-appearance: textfield;
+}
