--- a/styles/style.css
+++ b/styles/style.css
@@ -16,3 +16,8 @@ input[type="number"]::-webkit-inner-spin-button {
 input[type="number"] {
     -moz-appearance: textfield;
 }
+
+.three-dot:after {
+    content: '\2807';
+    font-size: 30px;
+    }
